k8s/mysql_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: my
          image: mariadb:latest
          ports:
          - containerPort: 3306
          volumeMounts:
          - name: mysql-pv-storage
            mountPath: /var/lib/my-data
      volumes:
        - name: mysql-pv-storage
          persistentVolumeClaim:
            claimName: my-volumeclaim
