k8s/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app: hello
spec:
  containers:
  - name: hello-container
    image: 6democratickim9/hello:2.0
    ports:
      - containerPort: 8000
