k8s/yaml_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-user-app
  template:
    metadata:
      labels:
        app: my-user-app
    spec:
      containers:
      - name: my-user-ms
        image: edowon0623/my-user-service
        ports:
        - containerPort: 8080
