k8s/my_hello_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
  - port: 8001
    targetPort: 8000
  type: NodePort
