k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mydb-service
  labels:
    app: mydb-svc
spec:
  type: NodePort
  ports:
  - port: 3306
  selector:
    app: mydb
