k8s/pod copy.yml
apiVersion: v1
kind: Service
metadata:
  name: my-user-app-service
spec:
  selector:
    app: my-user-app
  ports:
    - name: "808"
      port: 8088
      targetPort: 8088
  type: NodePort
